<resources>
    <string name="app_name">Louis Marry</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen">Splash screen</string>
    <string name="user_name">Username :</string>
    <string name="enter_user_name">Enter username</string>
    <string name="password">Password :</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_user_name">"Welcome %s "</string>
    <string name="next_screen">Next Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="bundle_data">"Bundle data : %s "</string>
    <string name="read_phone_state_ui">This permission need to read the incoming phone number</string>
    <string name="action">Action</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="user_login_data">user login data</string>
    <string name="logout">Logout</string>

    <string name="hint_username">Username</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_username">Username must contain at least 6 characters.</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="error_email">It should be valid email address</string>
    <string name="error_phone_number">It should be 10 digit number</string>
    <string name="new_to_app">New to App? Register here</string>
    <string name="all_ready_registered">Already Registered? Login here</string>
    <string name="temp_user_name">arunkumarv</string>
    <string name="temp_email">testauto02@vaid.com</string>
    <string name="temp_password">adfsdf</string>
    <string name="temp_phone_number">3453678454</string>

    <string name="error_please_try_again">Something wrong please try again</string>
    <string name="error_please_enter_valid_user_data">Please enter valid user data</string>
    <string name="error_user_not_found">User Not Found</string>
</resources>
